--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/reactstrap/5.0.0-alpha.3/reactstrap.min.js"></script>
         <!-- Lastly, include your app's bundle -->
         <script type="text/javascript" src="/assets/bundle.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase.js"></script>
     <title>M8D</title>
   </head>
   <body>
